--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,18 @@
     transform: rotate(360deg);
   }
 }
+nav {
+  background-color: rgb(40, 145, 243);
+  max-height: 60px;
+}
+nav a {
+  display: flex;
+}
+nav a img {
+  max-height: 50px;
+  margin: 0 auto;
+  
+}
 .item-beer {
   display: flex;
   margin: auto;
